# robo-loader

./: .gitignore  README.md  debug.txt  main.py  mk_installer.py  pyproject.toml  script.py  test.bat  test_one.py
loader/: core_impl.py  dummy_core.py  example.py  load.py  loader.py  models.py  server.py  transport.py  venv_manager.py
loader/impl/: core_impl.py  ext.py  load.py  transport.py
loader/server/: app.py
loader/server/frontend/: tsconfig.app.json
loader/server/frontend/src/: index.css  types.ts
loader/tester/: gui.py  test.py
loader/utils/: gdrive_dl.py  setup_path.py  test_all.py  unzip.py
robo_loader/: __init__.py  __main__.py  hybird.py  server_factory.py
robo_loader/impl/: core_impl.py  ext.py  models.py  module_loader.py  module_process.py  transport.py  venv_manager.py
robo_loader/server/: __init__.py  __main__.py  app.py  module_thread.py  module_thread_manager.py
robo_loader/server/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
robo_loader/server/frontend/public/api/: statuses  values
robo_loader/server/frontend/src/: App.tsx  RunningModules.tsx  SingleModuleDisplay.tsx  SingleStatusDisplay.tsx  StatusGrid.tsx  StatusSelector.tsx  ValueDisplay.tsx  ValuePanel.tsx  apiClient.ts  index.css  types.ts
robo_loader/server/frontend/src/components/: Alert.tsx
robo_loader/server/frontend/src/hooks/: apiClient.ts  useAIImage.ts
robo_loader/tester/: gui.py  test_module.py
robo_loader/testing/: runner.py  test.py  test_model.py  unit_tests.py  utils.py
robo_loader/utils/: fs.py  gdrive_dl.py  lifecycle.py  test_all.py  test_one.py  test_repl.py  unzip.py
scripts/: gdrive_dl.py  test_all.py  test_one.py  unzip.py
server/: server.py
server/frontend/: package.json  tsconfig.node.json
server/frontend/src/: App.tsx  StatusGrid.tsx  TerminalView.tsx
share/: test_results.html
