[tool.poetry]
name = "robo-loader"
version = "0.1.0"
description = ""
authors = ["Semih Koyuncu"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
loguru = "^0.7.2"
pyglet = "^2.0.18"
virtualenv = "^20.27.1"
pydrive = "^1.3.1"
rich = "^13.9.4"
pyserial = "^3.5"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sounddevice = "^0.5.1"
numpy = "^2.1.3"
wxwidgets = "^1.0.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
